// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CpsRecommendations should not render when cpsRecommendations toggle is disabled 1`] = `<div />`;

exports[`CpsRecommendations should not render when the hasStoryRecommendations flag is disabled for the service 1`] = `<div />`;

exports[`CpsRecommendations should render for a single recommendation item 1`] = `
<div>
  <div
    class="WsojWrapper-sc-1p91yk0-3 bybDJb"
  >
    <section
      aria-labelledby="recommendations-heading"
      class="Wrapper-opyob2-0 dlivvF"
      data-e2e="related-content"
      role="region"
    >
      <div
        class="SectionLabelWrapper-sc-1p91yk0-2 keYZPs"
      >
        <strong
          aria-labelledby="recommendations-heading"
          class="CustomSectionLabel-sc-1p91yk0-1 dbbYpP"
          dir="ltr"
        >
          Recommendations
        </strong>
      </div>
      <div
        class="SingleContentWrapper-opyob2-3 iddZTf"
      >
        <div
          class="GridComponent-nf79gm-0 elxESl"
          dir="ltr"
        >
          <div
            class="StoryPromoWrapper-sc-1dvfmi3-0 buBJys StoryPromoWrapper-sc-1p91yk0-0 gsqqaw"
          >
            <div
              class="ImageGridItem-sc-1xk56cj-0 fNYKlW"
              dir="ltr"
            >
              <div
                class="ImageContentsWrapper-sc-1dvfmi3-1 cinwNl"
              >
                <img
                  alt=""
                  class="StyledImg-sc-7vx2mr-0 hIxkbt"
                  src="http://c.files.bbci.co.uk/256/727445.jpg"
                />
              </div>
            </div>
            <div
              class="TextGridItem-sc-1lkbq5i-0 jJWtYv"
              dir="ltr"
            >
              <h3
                class="Headline-sc-1dvfmi3-3 dnWhDh"
              >
                <a
                  class="Link-sc-1dvfmi3-5 jeUMCT"
                  href="/mundo/5331"
                >
                  This is a headline
                </a>
              </h3>
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`CpsRecommendations should render for multiple recommendation items 1`] = `
<div>
  <div
    class="WsojWrapper-sc-1p91yk0-3 bybDJb"
  >
    <section
      aria-labelledby="recommendations-heading"
      class="Wrapper-opyob2-0 dlivvF"
      data-e2e="related-content"
      role="region"
    >
      <div
        class="SectionLabelWrapper-sc-1p91yk0-2 keYZPs"
      >
        <strong
          aria-labelledby="recommendations-heading"
          class="CustomSectionLabel-sc-1p91yk0-1 dbbYpP"
          dir="ltr"
        >
          Recommendations
        </strong>
      </div>
      <ul
        class="StoryPromoUl-sc-171lqjd-1 isCYWc GridComponent-nf79gm-0 buIDdq"
        dir="ltr"
        role="list"
      >
        <li
          class="StoryPromoLi-sc-171lqjd-0 StyledStoryPromoLi-sc-1p91yk0-4 cFGyOa GridComponent-nf79gm-0 dbJPTO"
          dir="ltr"
          role="listitem"
        >
          <div
            class="GridComponent-nf79gm-0 ehumcZ"
            dir="ltr"
          >
            <div
              class="StoryPromoWrapper-sc-1dvfmi3-0 buBJys StoryPromoWrapper-sc-1p91yk0-0 gsqqaw"
            >
              <div
                class="ImageGridItem-sc-1xk56cj-0 fNYKlW"
                dir="ltr"
              >
                <div
                  class="ImageContentsWrapper-sc-1dvfmi3-1 cinwNl"
                >
                  <img
                    alt=""
                    class="StyledImg-sc-7vx2mr-0 hIxkbt"
                    src="http://c.files.bbci.co.uk/256/727445.jpg"
                  />
                </div>
              </div>
              <div
                class="TextGridItem-sc-1lkbq5i-0 jJWtYv"
                dir="ltr"
              >
                <h3
                  class="Headline-sc-1dvfmi3-3 dnWhDh"
                >
                  <a
                    class="Link-sc-1dvfmi3-5 jeUMCT"
                    href="/mundo/5331"
                  >
                    This is a headline
                  </a>
                </h3>
              </div>
            </div>
          </div>
        </li>
        <li
          class="StoryPromoLi-sc-171lqjd-0 StyledStoryPromoLi-sc-1p91yk0-4 cFGyOa GridComponent-nf79gm-0 dbJPTO"
          dir="ltr"
          role="listitem"
        >
          <div
            class="GridComponent-nf79gm-0 ehumcZ"
            dir="ltr"
          >
            <div
              class="StoryPromoWrapper-sc-1dvfmi3-0 buBJys StoryPromoWrapper-sc-1p91yk0-0 gsqqaw"
            >
              <div
                class="ImageGridItem-sc-1xk56cj-0 fNYKlW"
                dir="ltr"
              >
                <div
                  class="ImageContentsWrapper-sc-1dvfmi3-1 cinwNl"
                >
                  <img
                    alt=""
                    class="StyledImg-sc-7vx2mr-0 hIxkbt"
                    src="http://c.files.bbci.co.uk/123/af07635.jpg"
                  />
                </div>
              </div>
              <div
                class="TextGridItem-sc-1lkbq5i-0 jJWtYv"
                dir="ltr"
              >
                <h3
                  class="Headline-sc-1dvfmi3-3 dnWhDh"
                >
                  <a
                    class="Link-sc-1dvfmi3-5 jeUMCT"
                    href="/mundo/12789"
                  >
                    This is another headline
                  </a>
                </h3>
              </div>
            </div>
          </div>
        </li>
      </ul>
    </section>
  </div>
</div>
`;
